--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Learn With Us</title>
+        <title>Practive</title>
         <link rel="stylesheet" href="stylesheets/style.css">
         <link rel="stylesheet" type="text/css" href="stylesheets/responsive.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
